<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="0dp"
        android:gravity="left"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@mipmap/back_black"
        app:title="">

        <TextView
            android:id="@+id/mTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/user_update_tittle"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18dp" />
        <TextView
            android:id="@+id/txv_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/language_save"
            android:paddingLeft="32dp"
            android:paddingRight="16dp"
            android:textColor="@color/main_style_color"
            android:textSize="@dimen/text_16dp" />
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:id="@+id/rl_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/heihgt_14dp">
        <ImageView
            android:id="@+id/imgv_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/go"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        <com.gao.intelligent.view.RoundImageView
            android:id="@+id/imgv_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/heihgt_20dp"
            android:layout_toLeftOf="@+id/imgv_go"
            android:scaleType="centerCrop"
            android:src="@mipmap/icon_app" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/user_update_image"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heihgt_50dp"
        android:paddingRight="@dimen/heihgt_14dp"
        android:layout_marginLeft="@dimen/heihgt_14dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/txv_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/user_update_nick"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/heihgt_8dp"
            android:text="@string/user_update_nick_hint"
            android:textColor="@color/text_hint"
            android:textSize="@dimen/text_16dp"
           android:layout_toRightOf="@+id/txv_nick"
            android:layout_centerVertical="true"/>
        <EditText
            android:id="@+id/edt_nickname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/input_nick_name"
            android:padding="@dimen/heihgt_8dp"
            android:textColor="@color/gray3"
            android:textSize="@dimen/text_16dp"
            android:textColorHint="@color/text_hint"
            android:maxLines="10" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heihgt_50dp"
        android:paddingRight="@dimen/heihgt_14dp"
        android:layout_marginLeft="@dimen/heihgt_14dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/txv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/user_update_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/input_nick_name"
            android:padding="@dimen/heihgt_8dp"
            android:textColor="@color/gray3"
            android:textSize="@dimen/text_16dp"
            android:textColorHint="@color/text_hint"
            android:maxLines="10" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heihgt_50dp"
        android:paddingRight="@dimen/heihgt_14dp"
        android:layout_marginLeft="@dimen/heihgt_14dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/txv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/user_update_email"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/input_nick_email"
            android:padding="@dimen/heihgt_8dp"
            android:textColor="@color/gray3"
            android:textSize="@dimen/text_16dp"
            android:textColorHint="@color/text_hint"
            android:maxLines="10" />
    </RelativeLayout>


    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heihgt_50dp"
        android:paddingRight="@dimen/heihgt_14dp"
        android:layout_marginLeft="@dimen/heihgt_14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heihgt_30dp"
            android:gravity="center_vertical"
            android:text="@string/user_update_sex"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <RadioGroup
            android:id="@+id/rg_sex"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/rbt_gril"
                android:text="@string/user_update_sex_gril"
                android:tag="1"
                android:textColor="@color/gray3"
                android:button="@null"
                android:textSize="@dimen/text_16dp"
                android:drawablePadding="@dimen/heihgt_8dp"
                android:paddingLeft="@dimen/heihgt_20dp"
                android:background="@null"
                android:drawableLeft="@drawable/cart_check_selector"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <RadioButton
                android:id="@+id/rbt_boy"
                android:text="@string/user_update_sex_boy"
                android:textColor="@color/gray3"
                android:button="@null"
                android:tag="0"
                android:textSize="@dimen/text_16dp"
                android:drawablePadding="@dimen/heihgt_8dp"
                android:background="@null"
                android:paddingLeft="@dimen/heihgt_20dp"
                android:drawableLeft="@drawable/cart_check_selector"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </RadioGroup>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"/>

</LinearLayout>
